Add support for YAML files when reading configuration files.
Read yaml using SnakeYAML (https://bitbucket.org/asomov/snakeyaml).
And then put the Map object output to Properties object.

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
     </profiles>
 
     <dependencies>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.21</version>
+        </dependency>
     </dependencies>
 
     <build>
